fix spacing for map and post

--- a/app/_scss/components/_post.scss
+++ b/app/_scss/components/_post.scss
@@ -18,6 +18,11 @@ Post
 
 .post {
   width: 100%;
+
+  &.with-map {
+    min-height: 300px;
+    min-height: 40vh;
+  }
 }
 
 .post.with-map .post-content {
